syntax = "proto3";
package canvas;
option go_package = "./pb";

message CanvasRequest {
  message Track { string track_uri = 1; }
  repeated Track tracks = 1;
}

message Artist {
  string artist_uri = 1;
  string artist_name = 2;
  string artist_img_url = 3;
}

message CanvasResponse {
  message Canvas {
    string id = 1;
    string canvas_url = 2;
    Type type = 4;
    string track_uri = 5;
    Artist artist = 6;
    bool explicit = 7;
    string other_id = 9;
    string canvas_uri = 11;
  }
  repeated Canvas canvases = 1;
}

enum Type {
  IMAGE = 0;
  VIDEO = 1;
  VIDEO_LOOPING = 2;
  VIDEO_LOOPING_RANDOM = 3;
  GIF = 4;
}
